--- a/client/src/styles/partials/_colors.scss
+++ b/client/src/styles/partials/_colors.scss
@@ -64,9 +64,10 @@ $feedback-blue-gradient: linear-gradient(#56CCF2, #E0F7FF);
 // Shadow definitions
 $shadow-primary: 0px 0px 1px rgba(33, 37, 41, 0.32), 0px 4px 6px rgba(33, 37, 41, 0.2);
 $shadow-secondary: 0 8px 16px rgba(0, 0, 0, 0.2); // for Hover menu
+$shadow-tertiary: 0px 16px 24px -4px rgba(30, 41, 59, 0.16), 0px 2px 2px -1px rgba(30, 41, 59, 0.04);
 $shadow-quaternary: 0px 12px 16px 0px rgba(0, 0, 0, 0.3);
 $shadow-quinary: 0px 28px 84px 0px rgba(0, 0, 0, 0.18);
-$shadow-tertiary: 0px 16px 24px -4px rgba(30, 41, 59, 0.16), 0px 2px 2px -1px rgba(30, 41, 59, 0.04);
+$shadow-senary: 0 0 8px rgba(0, 123, 255, 0.5); // for Input boxes
 
 // Frosted Glass
 $frosted-glass: rgba(255, 255, 255, 0.1);
